3rd commit (added animation, used room_database, swipeLeftRight, no toolbarMenu)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
 
     //    implementation "androidx.room:room-compiler:$roomVersion" IT IS NOT NEEDED ME
 
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
+
 
 
 
