--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,20 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+//    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     /*id ("androidx.navigation.safeargs")*/
     id "androidx.navigation.safeargs.kotlin"
 }
 
 android {
-    compileSdk 32
+    namespace "uz.gita.tasktodo"
+    compileSdk 34
 
     defaultConfig {
         applicationId "uz.gita.tasktodo"
         minSdk 21
-        targetSdk 32
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -46,6 +47,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.airbnb.android:lottie:5.0.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
