update: 1. updated share intent because of restricted policy for android 11+ 2. added static images and LICENSE.txt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,5 +21,18 @@
             </intent-filter>
         </activity>
     </application>
+    <queries>
+        <!-- Specific apps you interact with, eg: -->
+<!--        <package android:name="com.example.store" />-->
+<!--        <package android:name="com.example.service" />-->
+        <!--
+             Specific intents you query for,
+             eg: for a custom share UI
+        -->
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+            <data android:mimeType="*/*" />
+        </intent>
+    </queries>
 
 </manifest>
